Auf Java 11 umgestellt